docs: 修正运行说明——部署启动需 --module-path 提供 JavaFX 命名模块
JDK 启动器对主类继承 javafx.application.Application 的应用强制要求
javafx.graphics 为模块路径上的命名模块，仅 classpath 会报「缺少 JavaFX
运行时组件」；README 原 java -jar 直跑写法未经验证，已修正并附 Windows
命令示例与原因说明（详见 .learnings/ERRORS.md ERR-20260804-002）。